 - Feature: Add new built-in computational geometry library (BoundingBoxTree)
 - Feature: Add support for setting name and label to an Expression when constructed
 - Feature: Add support for passing a scalar GenericFunction as default value to a CompiledExpression
 - Feature: Add support for distance queries for 3-D meshes
 - Feature: Add PointIntegralSolver, which uses the MultiStageSchemes to solve local ODEs at Vertices
 - Feature: Add RKSolver and MultiStageScheme for general time integral solvers
 - Feature: Add support for assigning a Function with linear combinations of Functions, which lives in the same FunctionSpace
 - Added Python wrapper for SystemAssembler
 - Added a demo using compiled_extension_module with separate source files
 - Fixes for NumPy 1.7
 - Remove DOLFIN wrapper code (moved to FFC)
 - Add set_options_prefix to PETScKrylovSolver
 - Remove base class BoundarCondition
 - Set block size for PETScMatrix when available from TensorLayout
 - Add support to get block compressed format from STLMatrix
 - Add detection of block structures in the dofmap for vector equations
 - Expose PETSc GAMG parameters
 - Modify SystemAssembler to support separate assembly of A and b
1.2.0 [2013-03-24]
 - Fixes bug where child/parent hierarchy in Python were destroyed
 - Add utility script dolfin-get-demos
 - MeshFunctions in python now support iterable protocol
 - Add timed VTK output for Mesh and MeshFunction in addtion to Functions
 - Expose ufc::dofmap::tabulate_entity_dofs to GenericDofMap interface
 - Expose ufc::dofmap::num_entity_dofs to GenericDofMap interface
 - Allow setting of row dof coordinates in preconditioners (only works with PETSc backed for now)
 - Expose more PETSc/ML parameters
 - Improve speed to tabulating coordinates in some DofMap functions
 - Feature: Add support for passing a Constant as default value to a CompiledExpression
 - Fix bug in dimension check for 1-D ALE
 - Remove some redundant graph code